--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -1,5 +1,47 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <web-app>
     <!-- 기존 설정들 -->
+    <security-role>
+    <role-name>admin</role-name>
+    </security-role>
+
+    <security-role>
+        <role-name>manage</role-name>
+    </security-role>
+    
+<security-constraint>
+    <display-name>WebMarket Security_01</display-name>
+    <web-resource-collection>
+        <web-resource-name>WebMarket</web-resource-name>
+        <description></description>
+        <url-pattern>/admin/product_add.jsp</url-pattern>
+    </web-resource-collection>
+    <auth-constraint>
+        <description>권한 관리자명</description>
+        <role-name>admin</role-name>
+    </auth-constraint>
+</security-constraint>
+
+<security-constraint>
+    <display-name>WebMarket Security_02</display-name>
+    <web-resource-collection>
+        <web-resource-name>WebMarket</web-resource-name>
+        <description></description>
+        <url-pattern>/admin/index_ad.jsp</url-pattern>
+    </web-resource-collection>
+    <auth-constraint>
+        <description>권한 관리자명</description>
+        <role-name>manage</role-name>
+    </auth-constraint>
+</security-constraint>
+    
+    <login-config>
+		<auth-method>FORM</auth-method>
+		<form-login-config>
+			<form-login-page>/login/login.jsp</form-login-page>
+			<form-error-page>/login/login_failed.jsp</form-error-page>
+		</form-login-config>
+	</login-config>
 
     <error-page>
         <error-code>404</error-code>
