--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -49,4 +49,15 @@
         <error-code>404</error-code>
         <location>/exception/main_server_downtime.jsp</location>
     </error-page>
+    
+    <servlet>
+		<servlet-name>BoardController</servlet-name>
+		<servlet-class>mvc.controller.Board_controller</servlet-class>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>BoardController</servlet-name>
+		<url-pattern>*.do</url-pattern>
+	</servlet-mapping>
+
 </web-app>
